# Governance-Engineering

./: README.md
scientific-computing/: .claudeignore  .gitignore  CLAUDE.md  output.yaml  pyproject.toml  requirements.txt  scientific-computing.prompt.jsonl
scientific-computing/.claude/: settings.local.json
scientific-computing/.claude/agent-memory/summarize/: lessons-learned.yaml  verified-patterns.yaml
scientific-computing/.claude/agents/: commit-agent.md  confirm-agent.md  developer-agent.md  explore-agent.md  inspector-agent.md  optimize-agent.md  plan-agent.md  refactor-agent.md  summarize-agent.md  test-agent.md
scientific-computing/.claude/output-styles/: dispatcher.md
scientific-computing/.claude/rules/: architecture.md  coding-standards.md
scientific-computing/.claude/skills/refactor/: SKILL.md
scientific-computing/.claude/skills/sync/: SKILL.md
scientific-computing/docs/: requirements.md
scientific-computing/docs/ai/: MODULE_INDEX.yaml
scientific-computing/docs/ai/decisions/: ADR-001.md  ADR-002.md
scientific-computing/src/scicomp/: __init__.py
scientific-computing/tests/: test_integrate.py  test_interp.py  test_linalg.py  test_optimize.py
scientific-computing/tests/linalg/: __init__.py  test_decompositions.py  test_eigen.py  test_matrix_multiply.py  test_norms.py  test_utils.py
task-board/backend/: pyproject.toml  requirements.txt  seed.py  tasks.db-shm  tasks.db-wal
task-board/backend/src/: auth.py  config.py  database.py  exceptions.py  logger.py  main.py  password.py
task-board/backend/tests/: test_auth.py  test_tasks.py
(+406 files in other folders)
