[project]
name = "scicomp"
version = "0.1.0"
description = "Scientific Computing Library — 数值计算与统计分析工具库"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.1.0",
    "scipy>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "matplotlib>=3.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
